2007-08-22  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V03-07-02
	* fixed icon paths in application web page

2007-08-19  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-01
        * Check that output base path, mailbox path, and perl script files 
          actually exist during configure action, go into fail state if
          any of these do not exist.

2007-08-18  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-00
        * changes to move parameters out of streamer output modules and
          allow default values. So online parameters are in the SM XDAQ XML file
          while offline parameters have defaults and can be missing from the
          config file. The parameters common to all streams appear in the XML
          file, while each specific stay in the SM config file.
        * Change to allow the Storage Manager main thread to see the status of
          the FragmentCollector thread, and print out error messages for problems.
          Can later do cleanup and change to a fail state is desired.

2007-08-16  Harry Cheung <cheung@fnal.gov>

	* tag V03-06-00
        * changes to enter a failed state on problem with an action and
          reporting the state and reason for failure in application web page

2007-06-30  Harry Cheung <cheung@fnal.gov>

	* tag V03-04-08
        * changes for xdaq3.9

2007-06-28  Harry Cheung <cheung@fnal.gov>

	* tag V03-04-07
        * changes to scripts for communication with Tier-0 (Markus)
        * changes to cfg files in test for LNF support change in IOPool/Streamer

2007-06-19  Harry Cheung <cheung@fnal.gov>

	* tag V03-04-06
        * remove xdaq3.9 changes from the head so we can submit changes to nightly

2007-06-13  Harry Cheung <cheung@fnal.gov>

	* tag V03-04-05
        * fixes to DQM collation and archiving from Bill Badgett
	* changes to scripts arguments for communication with Tier-0 from Markus
        * fix for using DQMHttpSource with a FUEP app running EP in async
